--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,7 @@ dependencies:
   - pip=20.3.3
   - python=3.7.9
   - pip:
+    - imageio==2.9.0
     - matplotlib==3.3.4
     - numpy==1.20.0
+    - pygame==2.0.1
