--- a/environment.yml
+++ b/environment.yml
@@ -7,5 +7,7 @@ dependencies:
   - pip:
     - imageio==2.9.0
     - matplotlib==3.3.4
-    - numpy==1.20.0
+    - numpy==1.19.5
     - pygame==2.0.1
+    - scikit-learn==0.24.1
+    - tensorflow==2.4.1
