--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - pip=20.3.3
   - python=3.7.9
   - pytorch=1.7.1
+  - torchvision=0.8.2
   - pip:
     - imageio==2.9.0
     - matplotlib==3.3.4
